kubernetes/mautic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mautic
  namespace: mautic
spec:
  ports:
  - port: 8090
    targetPort: 80
  selector:
    app: mautic-web
