kubernetes/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautic-db
  namespace: mautic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mautic-db
  template:
    metadata:
      labels:
        app: mautic-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.4
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mautic-db
  namespace: mautic
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mautic-db
