kubernetes/mautic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mautic-ingress
  namespace: mautic
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-preserve: "true"
    service.beta.kubernetes.io/linode-loadbalancer-default-protocol: http
    service.beta.kubernetes.io/linode-loadbalancer-port-443: '{ "tls-secret-name": "expona-api-tls", "protocol": "https" }'
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - campaign.expona.ai
      secretName: expona-api-tls
      #secretName: letsencrypt-prod-tls 
  ingressClassName: nginx
  rules:
    - host: "campaign.expona.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mautic
                port:
                  number: 8090
